@@ -492,8 +492,8 @@ i9   62.9   2.9     0.4    4.113    600    0.2    6.2    320
 i9   62.93  2.85    0.43   4.115    640    0.23   6.1    300
 i9   67.1   7.9     0.2    5.004    700    0.4    4.5    289
 i9   67.14  7.78    0.17   5.007    700    0.43   4.4    280
-;s   80
-s
+s   80
+;s
 ;============================================================================; 
 ;========================= SECTION II: 49 SECONDS ===========================;
 ;============================================================================; 
